// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<SearchBar /> @events onChange should save event value 1`] = `
Object {
  "name": "",
}
`;

exports[`<SearchBar /> @events onChange should save event value 2`] = `
Object {
  "name": "testQuery",
}
`;

exports[`<SearchBar /> @renders in default state 1`] = `
<div
  className="SearchBar"
>
  <form
    className="SearchBar-form"
    onSubmit={[Function]}
  >
    <div
      className="SearchBar-iconParent"
    >
      <button
        className="SearchBar-button"
        onClick={[Function]}
      >
        <img
          alt="Search"
          className="SearchBar-icon"
          src={
            Object {
              "process": [Function],
            }
          }
        />
      </button>
    </div>
    <input
      className="SearchBar-input"
      name="name"
      onChange={[Function]}
      placeholder="Search for a movie, tv show, person..."
      type="text"
    />
  </form>
</div>
`;
